2010-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* add jet_inspect_profiles_x tool

2010-03-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* CommandLine: several *.config files can now be passed

2010-03-08  Hauke Held  <held@cern.ch>

	* tag V00-05-09
	* changed tag because V00-05-08 was already taken

	* tag V00-05-08
	* added foundBAncestor flag in GenJetLeptonFinder

2009-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-07
	* jih: reset maximum of first histogram according to maximum of
	additional histograms

	* tag V00-05-06
	* jih bugfix for inclusive distributions (when there are no bins!)

2009-11-22  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-05
	* stick to reco::Candidate interface in GenJetLeptonFinder instead
	of reco::GenJet

	* tag V00-05-04
	* add options 'mean', 'median', and 'peak' to
	jet_inspect_histos_x, each of which will lead to the appropriate
	line being drawn on top of each histogram, including a legend
	* add option 'overlay' to jet_inspect_graphs_x (default true): if
	set to false, the canvas will be divided and each graph will
	appear in its own pad
	* add option 'nocolor' to jet_inspect_graphs_x default false): use
	only black & white and an adjusted marker style scheme (with
	alternating full / open styles)
	* make variables 'PtRel' and 'RelLepPt' known to both programs

	* tag V00-05-03
	* bin/jet_inspect_histos_x.cc: improve plots
	* bin/jet_inspect_graphs_x.cc: add 'text' parameter

2009-11-19  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-02
	* minor fix

	* tag V00-05-01
	* style improvements to jet_inspect_graphs_c
	* fix CommandLine: only now can [v]string parmeter values with
	whitespaces in them be read correctly!

2009-11-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* added Hauke as developer
	* removed Roger as admin / developer