@@ -1,3 +1,9 @@
+2010-03-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-07-01
+	* implement hlines parameter feature for jet_inspect_profiles_x
+	tool
+
 2010-03-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-07-00
